--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 nav {
-    background-color:#352B59
+    background-color:#352B59;git
 }
 
 
@@ -30,7 +30,7 @@ nav {
   }
 
   .horizontal-nav a:hover {
-    color: ##04D4C8;
+    color: #04D4C8;
   }
 
 
