--- a/style.css
+++ b/style.css
@@ -72,25 +72,39 @@ nav {
 }
 
 #our-story{
+    margin-top: 70px;
+    margin-bottom: 85px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
     text-align: left;
-    margin-left: 50%;
-    margin-right: 20%;
-
-
+    justify-content: center;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+#our-story-text {
+  padding-left: 100px;
+}
+
 #our-story h2{
     padding-bottom: 10px;
     font-family: 'Times New Roman', Times, serif;
+    font-size: 1.4em;
 }
 #our-story p {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-bottom: 31px;
 }
 
 #our-story #blue-button{
-    border: solid 1px blue;
+    border: solid 1px rgba(0, 224, 208, 1);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
-    color: blue
+    color: rgba(0, 224, 208, 1);
+    padding: 10px;
+    background-color: white;
 }
 
 #watch{
