--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav {
     padding-bottom: 31px;
 }
 
-#our-story #blue-button{
+.blue-button{
     border: solid 1px rgba(0, 224, 208, 1);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
