--- a/style.css
+++ b/style.css
@@ -93,13 +93,31 @@ nav {
     color: blue
 }
 
+
+
 #watch{
     background-image: url("images/design-assets/bgk-middle.png");
     height: 550px;
     background-position: center;
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
 
 }
+#playtext{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+ 
+}
+#playtext h2 {
+  margin: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1rem;
+  color: white;
+}
+
+
 
 #expertise{
 
