--- a/style.css
+++ b/style.css
@@ -11,15 +11,20 @@
   position:absolute;
   top:0;
   left: 1%;
-  height: 50px;
+  height: 80px;
 }
 
 #logo-text {
-  
+  position:absolute;
+  top:0;
+  left: 5%;
+  color: #04D4C8;
+  font-size: 40px;
+  padding: 20px;
 }
 
 nav {
-    background-color:#2F284E;
+    background-color:#30284F;
     height: 80px;
     opacity: 0.9;
 }
@@ -30,18 +35,20 @@ nav {
     margin: 0;
     padding: 20px;
     text-align: center;
-    font-size: roboto-black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+
   .horizontal-nav li {
     display: inline-block;
     min-width: 5em;
     margin: 0 2em;
   }
+
   .horizontal-nav a {
     text-decoration: none;
     display: block;
-    font-family: Arial;
     font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: relative;
     color:white;
     padding: 0.5em 0;
@@ -66,10 +73,28 @@ nav {
 }
 .hero{
   color: white;
-  width: 30%;
+  width: 50%;
   margin:0 auto;
   text-align:center;
 }
+#hero h1 {
+  margin-bottom:50px; 
+  font-size:3rem;
+}
+
+#hero hr{
+  margin-bottom:50px;
+  border: 1px solid #04D4C8;
+  width: 50px;text-center;
+  margin: 0 auto;
+}
+
+#hero p{
+  margin-top:50px 0px;git add. 
+  font-size:1.5rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 
 #our-story{
     text-align: left;
